objects/Contact.object
<CustomObject>
    <fields>
        <fullName>CRM_Ability_for_repayments_difficult__c</fullName>
        <label>Ability for repayments wo difficulty</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Activation_Deactivation_User__c</fullName>
        <label>Activation/Deactivation User</label>
        <picklist>
            <picklistValues>
                <fullName>Activate User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivate User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Credit_Authority_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Authority Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Current_Address_Since__c</fullName>
        <label>Current Address Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_ABN__c</fullName>
        <label>ABN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_ACL__c</fullName>
        <label>ACL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_ACN__c</fullName>
        <label>ACN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_ACR__c</fullName>
        <label>ACR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_AML_Training_Date__c</fullName>
        <label>AML Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_ASIC_Reg_ACR__c</fullName>
        <label>ASIC Reg / ACR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Accreditation_Date_Time__c</fullName>
        <label>Accreditation Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Accreditation_Id__c</fullName>
        <externalId>true</externalId>
        <label>Accreditation Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Accreditation_Status_Formula__c</fullName>
        <formula>IF(ISPICKVAL(CRM_Mtg_Accreditation_Status__c,&apos;Active&apos;),
&apos;1&apos;,
IF(ISPICKVAL(CRM_Mtg_Accreditation_Status__c,&apos;Inactive&apos;),
&apos;0&apos;,
&apos;&apos;))</formula>
        <label>Accreditation Status Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Accreditation_Status__c</fullName>
        <label>Accreditation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospective</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Proceeding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Achieved_YTD__c</fullName>
        <formula>Account.CRM_Achieved_YTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Achieved YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Aggregator_ARM_Id__c</fullName>
        <formula>TEXT(Account.CRM_Mtg_Unique_Id__c)</formula>
        <label>Aggregator ARM Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Aggregator_Relationship_Created__c</fullName>
        <label>Aggregator Relationship Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Apps_Last_Quarter__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Apps Last Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Apps_Last_Year__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total no of applications submitted in the last 12 months, calculated at the beginning of each month.</inlineHelpText>
        <label># Apps Last 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Apps_MTD_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total value of applications submitted this month to date, calculated daily</inlineHelpText>
        <label>$ Apps MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Apps_MTD__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total no of applications submitted this month to date, calculated daily</inlineHelpText>
        <label># Apps MTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Apps_QTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Apps QTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Apps_YTD_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total value of applications submitted this year to date, calculated daily</inlineHelpText>
        <label>$ Apps YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Apps_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total no of applications submitted this year to date, calculated daily</inlineHelpText>
        <label># Apps YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_BDM_ARM_Id__c</fullName>
        <formula>TEXT(CRM_Mtg_Mortgage_BDM__r.CRM_Mtg_Unique_Id__c)</formula>
        <label>BDM ARM Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_BDM_Relationship_Created__c</fullName>
        <label>BDM Relationship Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Broker_Conversion_Rate__c</fullName>
        <formula>IF(CRM_Mtg_Apps_Last_Quarter__c &gt; 0,
CRM_Mtg_Setts_QTD__c/CRM_Mtg_Apps_Last_Quarter__c,
0)</formula>
        <label>Broker Conversion Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Retail Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Broker - Office Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aggregator BDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aggregator State Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aggregator Contact - Office Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label Partner - BDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label Contact - Office Admin (Pre Settlement)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label Contact - Office Admin (Post Settlement)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label Credit Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White Label Sales Manager (Sales Manager)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Change_Status_To__c</fullName>
        <inlineHelpText>This will activate/deactivate profile in other systems. Are you sure you want to proceed?</inlineHelpText>
        <label>Change Status To</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Channel__c</fullName>
        <formula>TEXT(Account.CRM_Mtg_Channel__c)</formula>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Data_Push_Date_Time__c</fullName>
        <label>Last Data Push Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Data_Sync_Date_Time__c</fullName>
        <label>Last Successful Data Sync Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Data_Sync_Errors__c</fullName>
        <label>Data Sync Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Data_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Deactivation_DateTime__c</fullName>
        <label>Deactivation DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Interest_Sports_Music__c</fullName>
        <inlineHelpText>Please select multiple (hold down Ctrl+ key)</inlineHelpText>
        <label>Interest (Sports/Music)</label>
        <picklist>
            <picklistValues>
                <fullName>AFL - All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFL -  Adelaide Crows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFL -  Brisbane Lions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFL -  Carlton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFL -  Collingwood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFL -  Essendon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFL -  Fremantle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFL -  Geelong Cats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFL -  Gold Coast Suns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFL -  GWS Giants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFL -  Hawthorn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFL -  Melbourne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFL -  North Melbourne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFL -  Port Adelaide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFL -  Richmond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFL -  St Kilda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFL -  Sydney Swans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFL -  West Coast Eagles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFL -  Western Bulldogs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASKETBALL - All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adelaide 36ers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brisbane Bullets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cairns Taipans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melbourne United</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perth Wildcats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sydney Kings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wollongong Hawks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASKETBALL - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRL - All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRL -  Broncos</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Is_Data_Sync_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Data Sync Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Is_Mortgage_BDM__c</fullName>
        <formula>CRM_Mtg_Mortgage_BDM__r.Id =  $User.Id</formula>
        <label>Is Mortgage BDM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Last_Visited_Date__c</fullName>
        <label>Last Visited Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Last_Visited_Indicator__c</fullName>
        <formula>IF((TODAY() - CRM_Mtg_Last_Visited_Date__c) &lt; 15 , 
IMAGE(&apos;/resource/1471511556000/GreenIndicator&apos;,&apos;green&apos;,25,25), 
IF((TODAY() - CRM_Mtg_Last_Visited_Date__c) &gt;= 15 &amp;&amp; (TODAY() - CRM_Mtg_Last_Visited_Date__c) &lt;= 45 , 
IMAGE(&apos;/resource/1471511635000/YellowIndecator&apos;,&apos;yellow&apos;,25,25), 
IMAGE(&apos;/resource/1471511583000/RedIndicator&apos;,&apos;red&apos;,25,25) 
) 
)</formula>
        <label>Last Visited Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Marketing_Direct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Direct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Marketing_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Marketing_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Mortgage_BDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mortgage BDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_NC_Lenders__c</fullName>
        <inlineHelpText>Please select multiple (hold down Ctrl+ key)</inlineHelpText>
        <label>NC Lenders</label>
        <picklist>
            <picklistValues>
                <fullName>Bluestone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LaTrobe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lattitude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liberty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MKM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RedZed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Nextgen_Login__c</fullName>
        <label>Nextgen Login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Office_Size__c</fullName>
        <label>Office Size</label>
        <picklist>
            <picklistValues>
                <fullName>Sole Operator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchise</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Please_Note1__c</fullName>
        <label>*Please Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Please_Note__c</fullName>
        <label>*Please Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Prime_Lenders__c</fullName>
        <inlineHelpText>Please select multiple (hold down Ctrl+ key)</inlineHelpText>
        <label>Prime Lenders</label>
        <picklist>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macquarie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virgin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank of Sydney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Re_engaged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-engaged?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Referrer_Type__c</fullName>
        <label>Referrer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accountants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real estate agents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Planners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing client base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of Mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Leads</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Relationship_Management_Notes__c</fullName>
        <label>Relationship Management Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Sales_Direct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Direct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Sales_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Sales_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Setts_Last_Quarter__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Setts Last Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Setts_Last_Year__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total no of settlements in the last 12 months, calculated at the beginning of each month.</inlineHelpText>
        <label># Setts Last 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Setts_MTD_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total value of settlements this month to date, calculated daily</inlineHelpText>
        <label>$ Setts MTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Setts_MTD__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total no of settlements this month to date, calculated daily</inlineHelpText>
        <label># Setts MTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Setts_QTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Setts QTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Setts_YTD_Amt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total value of settlements this year to date, calculated daily</inlineHelpText>
        <label>$ Setts YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Setts_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total no of settlements this year to date, calculated daily</inlineHelpText>
        <label># Setts YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Status__c</fullName>
        <label>Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Target_YTD__c</fullName>
        <formula>Account.CRM_Target_YTD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Unique_Id_Formula__c</fullName>
        <formula>TEXT(CRM_Mtg_Unique_Id__c)</formula>
        <label>Unique Id Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id (ARM Id)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRM_Persona__c</fullName>
        <label>Persona</label>
        <picklist>
            <picklistValues>
                <fullName>A Home Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>An Investor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Refinancer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_System_Deactivation_Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommunityUsername__c</fullName>
        <formula>CommunityUser__r.Username</formula>
        <label>Community Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Referred_Friend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Referred Friend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_RCTI_Sent_On__c</fullName>
        <label>Last RCTI Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manual_Sync_Mortgages__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When set to true, re-sends broker data to external systems such as NextGen, Jackson etc.</description>
        <inlineHelpText>Tick this box to manually send data to external systems.</inlineHelpText>
        <label>Manual Sync (Mortgage)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PL_Accreditation_Date_Time__c</fullName>
        <label>PL Accreditation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PL_Accreditation_Result__c</fullName>
        <description>Result of automatically accrediting broker based on setting status.</description>
        <label>PL Accreditation Result</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PL_Accreditation_Status__c</fullName>
        <description>Current Personal Loans accreditation status for the broker.  Setting this to Active will trigger processes that set up the broker, including sending them an email with accreditation details.</description>
        <inlineHelpText>Setting Active status will set the broker up to receive commissions and send them an email with accreditation details.</inlineHelpText>
        <label>PL Accreditation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Proceeding</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PL_Referral_URL__c</fullName>
        <description>Returns the URL the broker will use to submit personal loans</description>
        <formula>IF( NOT(ISBLANK(Referral_Code__c)) , 
   $Label.PL_Broker_Base_URL &amp;  Referral_Code__c, 
   &quot;&quot;)</formula>
        <label>PL Referral URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Code__c</fullName>
        <label>Referral Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_link__c</fullName>
        <label>Referral link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Referred_By_Code__c</fullName>
        <label>Referred By Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resend_PL_Accreditation_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ticking this box triggers flow to resend broker email.</description>
        <inlineHelpText>Ticking this box will send the broker their personal loans accreditation email including their unique URL.</inlineHelpText>
        <label>Resend Accreditation Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_ABN__c</fullName>
        <label>ABN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_ATP_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ATP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_A_C_N__c</fullName>
        <label>ACN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Active_Since__c</fullName>
        <label>Active Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Bankrupt_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bankrupt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_Deceased_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_Drivers_License_Card_Number__c</fullName>
        <label>Drivers License Card Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Drivers_License_State__c</fullName>
        <globalPicklist>ScCollection_State</globalPicklist>
        <label>Drivers License State</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScCollection_Drivers_License__c</fullName>
        <label>Drivers License</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_EDR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_Hardship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hardship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_Home_Email__c</fullName>
        <label>Home Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ScCollection_IDR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IDR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_Legal_Entity_Name__c</fullName>
        <label>Legal Entity Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Maiden_Name__c</fullName>
        <label>Maiden Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Main_Bus_Phone__c</fullName>
        <label>Main Bus Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ScCollection_Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmarried</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>